--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,47 @@
+name: Web Build
 
+on:
+  push:
+    branches:
+      - main
+      - dev
+
+jobs:
+  build:
+    runs-on: windows-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python 3.11.6
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.11.6
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+  
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.19.0'
+
+    - name: Build with Flet
+      run: |
+        flet build web
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: package
+        path: |
+          build/
+          dist/
+          bin/
+          lib/
+          include/
+          src/
+        if-no-files-found: error
